psql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgresql-client
  namespace: galaxy-90d8de3f-426a-459f-9093-a8a6e7268552
  labels:
    app: postgresql-client
spec:
  containers:
    - name: postgresql-client
      image: andreswebs/postgresql-client
      imagePullPolicy: Always
      stdin: true
      tty: true
      command: ["/bin/sh"]
